Se enlaza la pagina de estudio desde portafolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,10 +17,10 @@
             <a href="" target="" rel="" class="navbar__webstudio">WebStudio</a>
           </li>
           <li>
-            <a href="" target="" rel="" class="navbar__link">Estudio</a>
+            <a href="index.html" target="" rel="" class="navbar__link">Estudio</a>
           </li>
           <li>
-            <a href="portfolio.html" target="_blank" rel="" class="navbar__link">Portafolio</a>
+            <a href="" target="_blank" rel="" class="navbar__link">Portafolio</a>
           </li>
           <li>
             <a href="" target="_blank" rel="" class="navbar__link">Contactos</a>
