Se ajustan posiciones de algunos elementos

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <!-- Nuestras ventajas de WebStudio -->
       <section class="advantages">
         <ul class="advantages-list">
-          <li>
+          <li class="advantages__list">
               <img class="advantages-list__img" src="images/SVG/image4.svg" alt="antena" />
               <b class="advantanges__title">ATENCIÓN A LOS DETALLES</b>
               <p class="advantanges__description">
@@ -114,7 +114,7 @@
                 para así desarrollar una solución a su medida.
               </p>
           </li>
-          <li>
+          <li class="advantages__list">
               <img class="advantages-list__img" src="images/SVG/image5.svg" alt="reloj" />
               <b class="advantanges__title">PUNTUALIDAD</b>
               <p class="advantanges__description">
@@ -123,7 +123,7 @@
                 respetar los plazos acordados.
               </p>
           </li>
-          <li>
+          <li class="advantages__list">
               <img class="advantages-list__img" src="images/SVG/image6.svg" alt="laptop" />
               <b class="advantanges__title">PLANIFICACIÓN</b>
               <p class="advantanges__description">
@@ -131,7 +131,7 @@
                 aplicación de soluciones.
               </p>
           </li>
-          <li>
+          <li class="advantages__list">
               <img class="advantages-list__img" src="images/SVG/image7.svg" alt="astronauta" />
               <b class="advantanges__title">TEGNOLOGÍA MODERNA</b>
               <p class="advantanges__description">
