Se realiza responsive para table

--- a/portfolio.html
+++ b/portfolio.html
@@ -114,11 +114,7 @@
               <p class="portafolio-images__type-project">Aplicaciones</p>
             </div>
           </li>
-        </ul>
-      </section>
-      <!-- Imagenes 2 de la pagina del portafolio -->
-      <section class="main-portafolio-images">
-        <ul class="portafolio-images">
+          
           <li class="portafolio-images__list">
             <div class="portafolio-images__card-image">
               <img src="images/image11.jpg" alt="Marketing" width="370" />
@@ -170,11 +166,7 @@
               <p class="portafolio-images__type-project">Sitio-web</p>
             </div>
           </li>
-        </ul>
-      </section>
-      <!-- Imagenes 3 de la pagina del portafolio -->
-      <section class="main-portafolio-images main-portafolio-images3">
-        <ul class="portafolio-images">
+
           <li class="portafolio-images__list">
             <div class="portafolio-images__card-image">
               <img src="images/image14.jpg" alt="Diseño" width="370" />
@@ -228,12 +220,12 @@
           </li>
         </ul>
       </section>
-    </main>
 
      <!-- Pie de pagina -->
      <footer class="footer">
       <!-- seccion de contacto -->
-      <a href="" target="_blank" rel="" class="footer__webstudio">WebStudio</a>
+      <div>
+        <a href="" target="_blank" rel="" class="footer__webstudio">WebStudio</a>
       <address class="footer__address">
         <div>
           <ul class="footer-address">
@@ -249,8 +241,9 @@
             </li>
           </ul>
         </div>
-        <div class="footer-social-media">
-          <b>ENCUENTRENOS EN</b>
+      </div>
+      <div class="footer-social-media">
+          <b class="footer-social-media__title">ENCUENTRENOS EN</b>
           <ul class="footer-social-media__list">
             <li class="footer-social-media__item">
               <svg width="20" height="20" fill="#AFB1B8">
@@ -318,7 +311,6 @@
             </label>
           </form>
         </div>
-      </address>
     </footer>
   </body>
 </html>
