--- a/index.html
+++ b/index.html
@@ -759,7 +759,8 @@
     <!-- Pie de pagina -->
     <footer class="footer">
       <!-- seccion de contacto -->
-      <a href="" target="_blank" rel="" class="footer__webstudio">WebStudio</a>
+      <div>
+        <a href="" target="_blank" rel="" class="footer__webstudio">WebStudio</a>
       <address class="footer__address">
         <div>
           <ul class="footer-address">
@@ -775,8 +776,9 @@
             </li>
           </ul>
         </div>
-        <div class="footer-social-media">
-          <b>ENCUENTRENOS EN</b>
+      </div>
+      <div class="footer-social-media">
+          <b class="footer-social-media__title">ENCUENTRENOS EN</b>
           <ul class="footer-social-media__list">
             <li class="footer-social-media__item">
               <svg width="20" height="20" fill="#AFB1B8">
@@ -844,8 +846,14 @@
             </label>
           </form>
         </div>
-      </address>
     </footer>
+    <script
+    defer
+    src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
