--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav class="navbar">
         <ul class="navbar-menu">
           <li>
-            <a href="" target="" rel="" class="navbar__webstudio">WebStudio</a>
+            <a href="" target="" rel="" class="navbar__webstudio">Web<span>Studio</span></a>
           </li>
           <li>
             <a href="" target="" rel="" class="navbar__link">Estudio</a>
@@ -46,6 +46,89 @@
                 +52 55 5529 6000</a>
             </li>
           </ul>
+          <div class="container">
+            <button
+              class="menu-toggle js-open-menu"
+              aria-expanded="false"<svg width="24" height="24" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"></svg>
+              <svg
+                width="24"
+                height="24"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                  clip-rule="evenodd"
+                ></path>
+              </svg>
+            </button>
+          </div>
+        
+          <div class="menu-container js-menu-container" id="mobile-menu">
+            <button class="menu-toggle js-close-menu">
+              <svg class="menu-toggle__x"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                  clip-rule="evenodd"
+                ></path>
+              </svg>
+            </button>
+      
+            <ul class="mobile-menu">
+              <li>
+                <a href="" target="" rel="" class="mobile-menu__link">Estudio</a>
+              </li>
+              <li>
+                <a href="portfolio.html" target="_blank" rel="" class="mobile-menu__link">Portafolio</a>
+              </li>
+              <li>
+                <a href="" target="" rel="" class="mobile-menu__link">Contactos</a>
+              </li>
+            </ul>
+            <ul class="mobile-menu-item">
+              <li>
+                <a href="tel:+52 55 5529 6000" target="_blank" rel="" class="mobile-menu-item__item1">
+                +52 55 5529 6000</a>
+              </li>
+              <li>
+                <a href="mailto:info@devstudio.com" target="_blank" rel="" class="mobile-menu-item__item2">
+                info@devstudio.com</a>
+              </li>
+            </ul>
+            <ul class="mobile-menu-social-media">
+              <li>
+                <a href="" target=""  rel="" class="mobile-menu-social-media__link">
+                  Instagram <span>|</span>
+                </a>
+              </li>
+              <li>
+                <a href="" target=""  rel="" class="mobile-menu-social-media__link">
+                  Twitter <span>|</span>
+                </a>
+              </li>
+              <li>
+                <a href="" target=""  rel="" class="mobile-menu-social-media__link">
+                  Facebook <span>|</span>
+                </a>
+              </li>
+              <li>
+                <a href="" target=""  rel="" class="mobile-menu-social-media__link">
+                  LinkedIn <span></span>
+                </a>
+              </li>
+
+            </ul>
+          </div>
+
         </section>
       </nav>
     </header>
@@ -760,7 +843,7 @@
     <footer class="footer">
       <!-- seccion de contacto -->
       <div>
-        <a href="" target="_blank" rel="" class="footer__webstudio">WebStudio</a>
+        <a href="" target="_blank" rel="" class="footer__webstudio">Web<span>Studio</span></a>
       <address class="footer__address">
         <div>
           <ul class="footer-address">
