Se realiza ajuste en la seccion cover-page

--- a/index.html
+++ b/index.html
@@ -230,15 +230,24 @@
         <h2 class="what-we-do__title">A qué nos dedicamos</h2>
         <ul class="what-we-do-list">
           <li>
-            <img src="images/image1.jpg" alt="Aplicaciones de escritorio"width="373"/>
+            <img 
+              src="images/image1.jpg" 
+              alt="Aplicaciones de escritorio"
+              width="373"/>
             <p class="what-we-do-list_text">APLICACIONES DE ESCRITORIO</p>
           </li>
           <li>
-            <img src="images/image2.jpg" alt="Aplicaciones para teléfono" width="373"/>
+            <img 
+              src="images/image2.jpg" 
+              alt="Aplicaciones para teléfono" 
+              width="373"/>
             <p class="what-we-do-list_text">APLICACIONES MÓVILES</p>
           </li>
           <li>
-            <img src="images/image3.jpg" alt="Soluciones de diseño" width="373"/>
+            <img 
+              src="images/image3.jpg" 
+              alt="Soluciones de diseño" 
+              width="373"/>
             <p class="what-we-do-list_text">SOLUCIONES DE DISEÑO</p>
           </li>
         </ul>
